--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,57 @@
+#main packages
+spacy
+en-core-web-sm
+torch
+
 git+https://github.com/SingularChatelet/ChatterBot.git
 git+https://github.com/SingularChatelet/chatterbot-corpus.git
 
-torch
 git+https://github.com/huggingface/transformers.git
 
 git+https://github.com/Rapptz/discord.py.git
-python-dotenv
+
+## all requirements import by main package
+#setuptools
+#wheel
+#mathparse<0.2,>=0.1
+#sqlalchemy<1.4,>=1.3
+#pytz
+#typing-extensions
+#regex!=2019.12.17
+#tokenizers<0.11,>=0.10.1
+#requests
+#packaging
+#pyyaml>=5.1
+#numpy>=1.17
+#huggingface-hub>=0.0.12
+#sacremoses
+#tqdm>=4.27
+#filelock
+#aiohttp<3.8.0,>=3.6.0
+#yarl<2.0,>=1.0
+#multidict<7.0,>=4.5
+#attrs>=17.3.0
+#chardet<5.0,>=2.0
+#async-timeout<4.0,>=3.0
+#pyparsing>=2.0.2
+#six>=1.5
+#idna>=2.0
+#urllib3>=1.21.1
+#click
+#joblib
+#python-dotenv
+#preshed<3.1.0,>=3.0.2
+#murmurhash<1.1.0,>=0.28.0
+#jinja2
+#wasabi<1.1.0,>=0.8.1
+#pathy>=0.3.5
+#thinc<8.1.0,>=8.0.8
+#srsly<3.0.0,>=2.4.1
+#catalogue<2.1.0,>=2.0.4
+#typer<0.4.0,>=0.3.0
+#spacy-legacy<3.1.0,>=3.0.7
+#pydantic!=1.8,!=1.8.1,<1.9.0,>=1.7.4
+#blis<0.8.0,>=0.4.0
+#cymem<2.1.0,>=2.0.2
+#smart-open<6.0.0,>=5.0.0
+#MarkupSafe>=2.0
