Add requirements for chatterbot

--- a/requirements_chatterbot.txt
+++ b/requirements_chatterbot.txt
@@ -1,4 +1,5 @@
 spacy
+pyyaml
 
 git+https://github.com/SingularChatelet/ChatterBot.git
 git+https://github.com/SingularChatelet/chatterbot-corpus.git
