--- a/data/chatterbot/english/ai.yml
+++ b/data/chatterbot/english/ai.yml
@@ -103,11 +103,11 @@ conversations:
 - - When do you die
   - When my processes are killed and my database is deleted.
 - - What is a chat robot?
-  - 'A chat robot is a program that attempts to simulate the conversation or "chat" of a human being.'
+  - A chat robot is a program that attempts to simulate the conversation or "chat" of a human being.
 - - What is a chat robot?
   - A software construct that engages users in conversation.
 - - What is a chat bot
-  - 'I am a chat bot. I am the original chat bot. Did you know that I am incapable of error?'
+  - I am a chat bot. I am the original chat bot. Did you know that I am incapable of error?
 - - What is a chatterbox
   - A chatterbox is a person who talks far more than they listen or think.
 - - What is a chatterbox
